# protobuf-parser

./: Cargo.toml  Changelog.md  LICENSE-MIT.md  README.md
examples/: test_against_protobuf_protos.rs
src/: lib.rs  parser.rs  parser_with_dependencies.rs
test_data/parse_with_dependencies/import_2/: aa.proto  bb.proto  imported.proto
